# pinecone-python-client

./: .durations_grpc  .durations_rest_asyncio  .durations_rest_sync  .env.example  .gitignore  .gitmodules  .pinecone.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  Dockerfile  FIX_SUMMARY.md  FTS_SDK_PLAN.md  IMPORTABLE_OBJECTS.md  LICENSE  LICENSE.txt  MAINTAINERS.md  MANIFEST.in  Makefile  PR_DESCRIPTION.md  README.md  README.pypi.md  SDK_FEATURES.md  __repo__  app.py  app2.py  app3.py  compose.yaml  index.html  loadtest.py  mypy.ini  open_api_merge.json  pinecone.html  pyproject.toml  requirements-grpc.txt  requirements.txt  setup.cfg  (+3 more)
.github/: .clear-target-files  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  documentation.md  documentation.yml  feature-request.yml  feature_request.md
.github/actions/: poetry-ci
.github/scripts/: determine-test-suites.py
.github/workflows/: add-labels.yaml  alpha-release.yaml  build-and-publish-docs.yaml  cleanup-nightly.yaml  cleanup.yaml  dev-publish.yml  lint.yaml  merge.yaml  migration-paths.yaml  nightly-release.yaml  nightly-spruce-dev-release.yaml  on-merge.yaml  on-pr-dep-change.yaml  on-pr.yaml  on-push.yml  optimistic-updates.yaml  poetry-smoke-tests.yaml  pr.yaml  project-cleanup.yaml  project-setup.yaml  publish-to-pypi-test.yaml  publish-to-pypi.yaml  release-dev.yaml  release-prod.yaml  release-rc.yaml  release-readiness.yml  release-spruce.yaml  release-test.yaml  release.yaml  shared-fixtures-create.yaml  shared-fixtures-delete.yaml  staleness-check.yml  testing-dependency-asyncio.yaml  testing-dependency-grpc.yaml  testing-dependency-rest.yaml  testing-dependency.yaml  testing-grpc.yaml  testing-install.yaml  testing-integration-asyncio.yaml  testing-integration-control-plane-pod.yaml  (+8 more)
codegen/: buf.gen.yaml  buf.yaml  build-grpc.sh  build-oas.sh  grpc.sh  openapi-config.control.json  openapi-config.data.json  openapi-config.json
codegen-src/templates/: exceptions.mustache
codegen/openapi/: openapi-generator-args.python.json
docs/: Makefile  README.md  admin.rst  advanced-topics.md  asyncio.rst  client-configuration.md  collections.md  conf.py  faq.md  grpc.rst  index.rst  inference-api.md  pinecone.html  pod-indexes.md  rest.rst  serverless-indexes.md  tags.md  upgrading.md  working-with-indexes.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: controller.rst.exclude  hub.rst.exclude  protos.md.exclude
docs/db_control/: collections.md  pod-indexes.md  serverless-indexes.md  shared-index-actions.md  shared-index-configs.md
docs/db_data/: index-usage-byov.md
docs/getting-started/: authentication.md  index.rst  installation.md
docs/guides/: concepts.md  error-handling.md  grpc.md  index.rst  pagination.md  performance.md  sync-vs-async.md
docs/how-to/: assistant.md  collections.md  index.rst  integrated-records.md
docs/inference/: inference-api.md
docs/intro/: concepts.rst.exclude  figure_multivariate.rst.exclude  installation.rst.exclude  quicktour.rst.exclude
docs/maintainers/: debugging.md  releasing.md  testing-guide.md
docs/migration/: v9-migration.md
docs/pinecone/: config.html  core.html  exceptions.html  index.html  info.html  manage.html
docs/python_client/: index.rst  manage.rst  router.rst.exclude
docs/reference/: admin.rst  async-index.rst  async-pinecone.rst  exceptions.rst  grpc.rst  index.rst  models.rst  pinecone.rst  preview.rst  sync-index.rst
pdoc/: README.md
pinecone/: __init__.py  __init__.pyi  __repo__  __version__  _client.py  _database.py  _index.py  _version.py  api_action.py  api_base.py  api_controller.py  api_database.py  api_router.py  cli.py  config.html  config.py  connector.py  constants.py  core.html  database.py  database_spec.py  deprecated_plugins.py  deprecation_warnings.py  exceptions.html  exceptions.py  graph.py  grpc.py  index.html  index.py  info.html  info.py  legacy_pinecone_interface.py  license_header.txt  manage.html  manage.py  pinecone.py  pinecone_asyncio.py  pinecone_interface_asyncio.py  retry.py  router.py  (+2 more)
pinecone/__interface__/: __init__.py
pinecone/_internal/: __init__.py  batch.py  batching.py  config.py  constants.py  data_plane_helpers.py  http_client.py  indexes_helpers.py  kwargs_aliases.py  user_agent.py  validation.py  vector_factory.py
pinecone/_legacy/: __init__.py  async_req.py  search_query_kwarg.py
pinecone/adapters/: __init__.py  index_adapter.py  protocols.py  response_adapters.py  utils.py
pinecone/admin/: __init__.py  admin.py  api_keys.py  organizations.py  project_eraser.py  projects.py
pinecone/async_client/: __init__.py  _assistants_legacy.py  assistants.py  async_index.py  backups.py  collections.py  indexes.py  inference.py  pinecone.py  restore_jobs.py
pinecone/client/: __init__.py  _assistant_namespace_proxy.py  _assistants_legacy.py  assistants.py  backups.py  collections.py  indexes.py  inference.py  restore_jobs.py
pinecone/core/: grpc.html  (+10 more)
pinecone_plugins/: __init__.py
rings/: build.rings.toml
rust/: Cargo.toml  build.rs
rust/proto/: db_data_2025-10.proto
rust/proto/google/api/: annotations.proto  field_behavior.proto
rust/src/: lib.rs  retry.rs  transport.rs
scripts/: bump_version.py  check_scheme_prepend.sh  cleanup-all.py  create-index-legacy.py  create.py  delete-all-collections.py  delete.py  feature-gen.py  generate_init_stub.py  generate_usage.py  ponelope_memory.py  repl.py  test-async-retry.py  test-server.py  test_pinecone_local_delete.py
spec/: README.md
specs/: README.md  VALIDATION_PUNCH_LIST.md  core.proto  index_service.json  openapi-generator-args.python.json  pinecone_api.json  vector_column_service.proto  vector_service.openapi-v3.json  vector_service.openapi.json  vector_service.proto  vector_service.swagger.json
sphinx/: conf.py  index.rst
tasks/: CQ-0001.md
tests/: __init__.py  claims  conftest.py  factories.py  fixtures.py  glove-25-angular-sm.hdf5  pytest_shard.py  test_grpc.py  test_helpers.py  test_validate.py
(+2351 files in other folders)
