[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pinecone"
version = "9.0.0"
description = "Pinecone Python SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]",
    "msgspec",
    "orjson",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "respx",
    "mypy",
    "ruff",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton",
    "sphinx-tabs",
]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "pinecone._grpc"
python-source = "."

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC", "S", "T20", "N", "C4", "SIM", "PERF", "RUF", "PT", "TID", "RET", "FURB"]
ignore = ["ASYNC109", "SIM108", "PERF203", "RUF002"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests".msg = "Use httpx instead of requests"
"pydantic".msg = "Use msgspec instead of pydantic"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "B905", "S101", "S105", "S106", "S107", "S110", "T20", "PT018", "PT019"]
"pinecone/_internal/http_client.py" = ["S311"]
"pinecone/grpc/future.py" = ["S110", "SIM105"]
# Backcompat shims must preserve legacy typing constructs (List, Optional)
# because tests do identity checks on field annotation objects:
#   dataclasses.fields(X).type is SomeClass / == List[X] / == Optional[X]
# I002: no required-imports (from __future__ import annotations breaks identity checks)
# UP006: allow List[] (tests compare with typing.List, not builtin list)
# UP007: allow Optional[X] (tests compare with typing.Optional, not X | None)
# UP035: allow typing imports of List/Optional that UP006/UP007 need
# UP045: allow Optional[X] in annotations
"pinecone_plugins/**" = ["I002", "UP006", "UP007", "UP035", "UP045"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 5

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
]
