[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pinecone"
version = "9.0.0"
description = "Pinecone Python SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]",
    "msgspec",
    "orjson",
]

[project.scripts]
repl = "scripts.repl:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "respx",
    "mypy",
    "ruff",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton",
    "sphinx-tabs",
]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "pinecone._grpc"
python-source = "."

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC", "S", "T20", "N", "C4", "SIM", "PERF", "RUF", "PT", "TID", "RET", "FURB"]
ignore = ["ASYNC109", "SIM108", "PERF203", "RUF002"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests".msg = "Use httpx instead of requests"
"pydantic".msg = "Use msgspec instead of pydantic"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "B905", "S101", "S105", "S106", "S107", "S110", "T20", "PT018", "PT019"]
"pinecone/_internal/http_client.py" = ["S311"]
"pinecone/grpc/future.py" = ["S110", "SIM105"]

[tool.pytest.ini_options]
anyio_mode = "auto"
timeout = 5
markers = [
    "smoke: end-to-end smoke tests that hit a real Pinecone backend (see tests/smoke/README.md)",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "python-dotenv>=1.2.2",
    "pytest-benchmark>=5.0.0",
    "respx>=0.22.0",
    "mypy>=1.20.0",
    "ruff>=0.15.9",
]
