[package]
name = "pinecone-grpc"
version = "9.0.0"
edition = "2021"

[lib]
name = "pinecone_grpc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
tonic = { version = "0.13", features = ["tls-ring", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
http = "1"
hyper-util = { version = "0.1", features = ["client-legacy"] }

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"
